--- a/app/views/layouts/rails_observatory/application.html.erb
+++ b/app/views/layouts/rails_observatory/application.html.erb
@@ -40,8 +40,8 @@
           }],
           xaxis: {
             type: 'datetime',
-            min: <%= @latency_range.start_timestamp %>,
-            max: <%= @latency_range.end_timestamp %>
+            min: <%= @time_frame.begin.to_i %>,
+            max: <%= @time_frame.end.to_i %>
           },
           yaxis: {
             decimalsInFloat: 0,
@@ -132,8 +132,57 @@
     </nav>
     <header class="py-10">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-        <h1 class="text-3xl font-bold tracking-tight text-white">Controllers</h1>
+        <div>
+          <div>
+            <% if has_breadcrumbs? %>
+              <nav class="sm:hidden" aria-label="Back">
+                <a href="<%= breadcrumbs.last[1] %>" class="flex items-center text-sm font-medium text-gray-400 hover:text-gray-200">
+                  <svg class="-ml-1 mr-1 h-5 w-5 flex-shrink-0 text-gray-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd"/>
+                  </svg>
+                  Back
+                </a>
+              </nav>
+              <nav class="hidden sm:flex" aria-label="Breadcrumb">
+
+                <ol role="list" class="flex items-center space-x-4">
+                  <li>
+                    <div class="flex">
+                      <% text, path = breadcrumbs.first %>
+                      <a href="<%= path %>" class="text-sm font-medium text-gray-400 hover:text-gray-200"><%= text %></a>
+                    </div>
+                  </li>
+                  <% breadcrumbs.slice(1)&.each do |crumb| %>
+                    <li>
+                      <div class="flex items-center">
+                        <svg class="h-5 w-5 flex-shrink-0 text-gray-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                          <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd"/>
+                        </svg>
+                        <a href="#" class="ml-4 text-sm font-medium text-gray-400 hover:text-gray-200">TODO</a>
+                      </div>
+                    </li>
+                  <% end %>
+                  <li>
+                    <div class="flex items-center">
+                      <svg class="h-5 w-5 flex-shrink-0 text-gray-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd"/>
+                      </svg>
+                      <a href="#" aria-current="page" class="ml-4 text-sm font-medium text-gray-400"><%= yield :title %></a>
+                    </div>
+                  </li>
+                </ol>
+              </nav>
+            <% end %>
+          </div>
+          <div class="mt-2 md:flex md:items-center md:justify-between">
+            <div class="min-w-0 flex-1">
+              <h1 class="text-2xl font-bold leading-7 text-white sm:truncate sm:text-3xl sm:tracking-tight"><%= yield :title %></h1>
+            </div>
+          </div>
+        </div>
       </div>
+
+
     </header>
   </div>
 
