--- a/app/views/rails_observatory/controller_metrics/index.html.erb
+++ b/app/views/rails_observatory/controller_metrics/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, 'Controllers') %>
 <div style="display:grid;grid-template-columns: 1fr 1fr;">
   <div data-controller="chart"
        data-chart-type-value="line">
@@ -37,15 +38,14 @@
       </tr>
       </thead>
       <tbody class="divide-y divide-gray-200 bg-white">
-      <% @all_series.each do |series| %>
-        <% info = series.info %>
+      <% @controller_metrics.each do |controller_metric| %>
         <tr>
-          <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= info['labels']['action'] %></td>
-          <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= series[@time_frame].reduce %></td>
+          <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= controller_metric.action %></td>
+          <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= controller_metric.request_count(@time_frame) %></td>
           <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 lg:table-cell">25ms</td>
           <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Member</td>
           <td class="whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
-            <a href="#" class="text-indigo-600 hover:text-indigo-900">Edit<span class="sr-only">, Lindsay Walton</span></a>
+            <a href="#" class="text-indigo-600 hover:text-indigo-900"><%= link_to 'View', controller_metric_path(controller_metric.id) %></a>
           </td>
         </tr>
       <% end %>
