Graphs are working again, time selector hookup

--- a/app/views/layouts/rails_observatory/application.html.erb
+++ b/app/views/layouts/rails_observatory/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-full bg-gray-100">
+<html class="h-full bg-gray-100" lang="en">
 <head>
   <title>Observatory</title>
   <%= csrf_meta_tags %>
@@ -40,15 +40,17 @@
           }],
           xaxis: {
             type: 'datetime',
-            min: <%= @time_frame.begin.to_i %>,
-            max: <%= @time_frame.end.to_i %>
+            min: <%= @time_range.begin.to_i * 1000 %>,
+            max: <%= (@time_range.end.nil? ? Time.now.to_i : @time_range.end.to_i) * 1000 %>,
           },
           yaxis: {
             decimalsInFloat: 0,
-          },
+          }
+          ,
           stroke: {
             width: 2
-          },
+          }
+          ,
           tooltip: {
             x: {
               format: 'dd MMM yyyy HH:mm'
@@ -81,22 +83,63 @@
                 <div class="ml-10 flex items-baseline space-x-4">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                   <a href="#" class="nav-btn-active" aria-current="page">Controllers</a>
-                  <a href="#" class="nav-btn">Mailers</a>
-                  <a href="#" class="nav-btn">Jobs</a>
+                  <a href="#" class="nav-btn">Mailers</a> <a href="#" class="nav-btn">Jobs</a>
                 </div>
               </div>
             </div>
             <div class="flex flex-1 items-center justify-center px-2 lg:ml-6 lg:justify-end">
               <div class="w-full max-w-lg lg:max-w-xs">
-                <label for="search" class="sr-only">Search</label>
-                <div class="relative">
-                  <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
-                    <svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                      <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd"/>
-                    </svg>
-                  </div>
-                  <input id="search" name="search" class="block w-full rounded-md border-0 bg-white py-1.5 pl-10 pr-3 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="Search" type="search">
+                <!-- Dropdown Menu -->
+                <div class="relative dropdown">
+                  <button type="button" class="relative w-full cursor-default rounded-md bg-gray-800 py-1.5 pl-3 pr-10 text-left text-gray-300 shadow-sm ring-1 ring-inset ring-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-300 sm:text-sm sm:leading-6" aria-haspopup="listbox" aria-expanded="true" aria-labelledby="listbox-label">
+                    <span class="flex items-center">
+                      <span class="text-gray-400">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+                      </span>
+                      <span class="block truncate ml-2">Past 1 hour</span>
+                      <span class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2">
+                        <svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                          <path fill-rule="evenodd" d="M10 3a.75.75 0 01.55.24l3.25 3.5a.75.75 0 11-1.1 1.02L10 4.852 7.3 7.76a.75.75 0 01-1.1-1.02l3.25-3.5A.75.75 0 0110 3zm-3.76 9.2a.75.75 0 011.06.04l2.7 2.908 2.7-2.908a.75.75 0 111.1 1.02l-3.25 3.5a.75.75 0 01-1.1 0l-3.25-3.5a.75.75 0 01.04-1.06z" clip-rule="evenodd" />
+                        </svg>
+                      </span>
+                    </span>
+                  </button>
+
+                  <!--
+                    Select popover, show/hide based on select state.
+
+                    Entering: ""
+                      From: ""
+                      To: ""
+                    Leaving: "transition ease-in duration-100"
+                      From: "opacity-100"
+                      To: "opacity-0"
+                  -->
+                  <ul class="dropdown-menu opacity-0 transition-all invisible absolute z-10 mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm" tabindex="-1" role="listbox" aria-labelledby="listbox-label" aria-activedescendant="listbox-option-3">
+                    <!--
+                      Select option, manage highlight styles based on mouseenter/mouseleave and keyboard navigation.
+
+                      Highlighted: "bg-indigo-600 text-white", Not Highlighted: "text-gray-900"
+                    -->
+                    <% [5.minutes, 10.minutes, 15.minutes, 30.minutes, 1.hour, 4.hours, 1.day, 2.days, 7.days, 1.month].each do |time_frame| %>
+                      <li class="text-gray-900 relative cursor-default select-none py-2 pl-11 pr-4 hover:bg-gray-600 hover:text-white focus-within:bg-gray-600 focus-within:text-white" id="listbox-option-0" role="option">
+                        <a href="?duration=<%= time_frame %>">
+                          <!-- Selected: "font-semibold", Not Selected: "font-normal" -->
+                          <span class="font-normal block truncate">Past <%= time_frame.inspect %></span>
+                          <span class="hidden absolute inset-y-0 left-0 flex items-center pl-4">
+                            <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                              <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+                            </svg>
+                          </span>
+                        </a>
+                      </li>
+                    <% end %>
+
+                  </ul>
                 </div>
+
               </div>
             </div>
             <div class="-mr-2 flex md:hidden">
@@ -106,11 +149,11 @@
                 <span class="sr-only">Open main menu</span>
                 <!-- Menu open: "hidden", Menu closed: "block" -->
                 <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"/>
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                 </svg>
                 <!-- Menu open: "block", Menu closed: "hidden" -->
                 <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                 </svg>
               </button>
             </div>
@@ -138,10 +181,9 @@
               <nav class="sm:hidden" aria-label="Back">
                 <a href="<%= breadcrumbs.last[1] %>" class="flex items-center text-sm font-medium text-gray-400 hover:text-gray-200">
                   <svg class="-ml-1 mr-1 h-5 w-5 flex-shrink-0 text-gray-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                    <path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd"/>
+                    <path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd" />
                   </svg>
-                  Back
-                </a>
+                  Back </a>
               </nav>
               <nav class="hidden sm:flex" aria-label="Breadcrumb">
 
@@ -156,7 +198,7 @@
                     <li>
                       <div class="flex items-center">
                         <svg class="h-5 w-5 flex-shrink-0 text-gray-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                          <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd"/>
+                          <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
                         </svg>
                         <a href="#" class="ml-4 text-sm font-medium text-gray-400 hover:text-gray-200">TODO</a>
                       </div>
@@ -165,9 +207,10 @@
                   <li>
                     <div class="flex items-center">
                       <svg class="h-5 w-5 flex-shrink-0 text-gray-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                        <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd"/>
+                        <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
                       </svg>
-                      <a href="#" aria-current="page" class="ml-4 text-sm font-medium text-gray-400"><%= yield :title %></a>
+                      <a href="#" aria-current="page" class="ml-4 text-sm font-medium text-gray-400"><%= yield :title
+                      %></a>
                     </div>
                   </li>
                 </ol>
@@ -176,7 +219,8 @@
           </div>
           <div class="mt-2 md:flex md:items-center md:justify-between">
             <div class="min-w-0 flex-1">
-              <h1 class="text-2xl font-bold leading-7 text-white sm:truncate sm:text-3xl sm:tracking-tight"><%= yield :title %></h1>
+              <h1 class="text-2xl font-bold leading-7 text-white sm:truncate sm:text-3xl sm:tracking-tight"><%= yield
+                                                                                                                :title %></h1>
             </div>
           </div>
         </div>
