--- a/app/assets/stylesheets/rails_observatory/application.tailwind.css
+++ b/app/assets/stylesheets/rails_observatory/application.tailwind.css
@@ -15,4 +15,10 @@
   .nav-btn {
     @apply text-gray-300 hover:bg-gray-700 hover:text-white nav-btn-base;
   }
+
+  .dropdown:focus-within .dropdown-menu {
+    opacity:1;
+    transform: translate(0) scale(1);
+    visibility: visible;
+  }
 }
