--- a/app/views/rails_observatory/controller_metrics/index.html.erb
+++ b/app/views/rails_observatory/controller_metrics/index.html.erb
@@ -41,7 +41,7 @@
       <% @controller_metrics.each do |controller_metric| %>
         <tr>
           <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= controller_metric.action %></td>
-          <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= controller_metric.request_count(@time_frame) %></td>
+          <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= controller_metric.request_count(@time_range) %></td>
           <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 lg:table-cell">25ms</td>
           <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Member</td>
           <td class="whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
