--- a/app/views/rails_observatory/controller_metrics/index.html.erb
+++ b/app/views/rails_observatory/controller_metrics/index.html.erb
@@ -1,18 +1,27 @@
 <% content_for(:title, 'Controllers') %>
-<div style="display:grid;grid-template-columns: 1fr 1fr;">
-  <div data-controller="chart"
-       data-chart-type-value="line">
-    <div class="border-b border-gray-200 pb-5 ml-4 mr-1">
-      <h3 class="text-base font-semibold leading-4 text-gray-600">Latency</h3>
+<div style="display:grid;grid-template-columns: 1fr 1fr;" class="gap-4">
+  <%= render 'chart' %>
+  <div data-controller="chart" data-chart-type-value="bar">
+    <div class="border-b border-gray-200 pb-5">
+      <h3 class="text-base font-semibold leading-4 text-gray-600">Requests</h3>
     </div>
     <div data-chart-target="chart"></div>
     <script type="application/json" data-chart-target="data">
-      <%== @latency_range.to_a.to_json %>
+      <%== @request_count_range.to_a.to_json %>
+    </script>
+  </div>
+  <div data-controller="chart" data-chart-type-value="line">
+    <div class="border-b border-gray-200 pb-5">
+      <h3 class="text-base font-semibold leading-4 text-gray-600">Runtime Breakdown</h3>
+    </div>
+    <div data-chart-target="chart"></div>
+    <script type="application/json" data-chart-target="data">
+      <%== @runtime_breakdown.to_a.to_json %>
     </script>
   </div>
   <div data-controller="chart" data-chart-type-value="bar">
-    <div class="border-b border-gray-200 pb-5 ml-4 mr-1">
-      <h3 class="text-base font-semibold leading-4 text-gray-600">Requests</h3>
+    <div class="border-b border-gray-200 pb-5">
+      <h3 class="text-base font-semibold leading-4 text-gray-600">Errors</h3>
     </div>
     <div data-chart-target="chart"></div>
     <script type="application/json" data-chart-target="data">
@@ -31,7 +40,6 @@
         <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 lg:table-cell">Avg
           Latency
         </th>
-        <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Role</th>
         <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-0">
           <span class="sr-only">Edit</span>
         </th>
@@ -43,7 +51,6 @@
           <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= controller_metric.action %></td>
           <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= controller_metric.request_count(@time_range) %></td>
           <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 lg:table-cell">25ms</td>
-          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Member</td>
           <td class="whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
             <a href="#" class="text-indigo-600 hover:text-indigo-900"><%= link_to 'View', controller_metric_path(controller_metric.id) %></a>
           </td>
