--- a/app/views/rails_observatory/controller_metrics/_chart.html.erb
+++ b/app/views/rails_observatory/controller_metrics/_chart.html.erb
@@ -1,10 +1,19 @@
-<div data-controller="chart"
-  data-chart-type-value="line">
-  <div class="border-b border-gray-200 pb-5 ">
+<div data-controller="chart" data-chart-type-value="<%= local_assigns[:type] %>">
+  <div class="border-b border-gray-200 pb-5">
     <h3 class="text-base font-semibold leading-4 text-gray-600"><%= local_assigns[:name] %></h3>
   </div>
-  <div data-chart-target="chart"></div>
-  <script type="application/json" data-chart-target="data">
-    <%== @latency_series.to_a.to_json %>
-  </script>
+  <% if local_assigns[:series] %>
+    <div data-chart-target="chart"></div>
+    <% Array.wrap(local_assigns[:series]).each do |series| %>
+      <script type="application/json" data-chart-target="data" data-series-name="<%= series.info["labels"]["name"] %>">
+        <%== series[@time_range].rollup(buckets: 120).to_a.to_json %>
+      </script>
+    <% end %>
+  <% else %>
+    <div class="text-center">
+      <h3 class="mt-2 text-sm font-semibold text-gray-400">No data available in this timeframe</h3>
+    </div>
+  <% end %>
+
+
 </div>
