--- a/app/views/rails_observatory/controller_metrics/index.html.erb
+++ b/app/views/rails_observatory/controller_metrics/index.html.erb
@@ -1,33 +1,9 @@
 <% content_for(:title, 'Controllers') %>
-<div style="display:grid;grid-template-columns: 1fr 1fr;" class="gap-4">
-  <%= render 'chart', name: 'Latency', series: @latency_series %>
-  <div data-controller="chart" data-chart-type-value="bar">
-    <div class="border-b border-gray-200 pb-5">
-      <h3 class="text-base font-semibold leading-4 text-gray-600">Requests</h3>
-    </div>
-    <div data-chart-target="chart"></div>
-    <script type="application/json" data-chart-target="data">
-      <%== @request_count_range.to_a.to_json %>
-    </script>
-  </div>
-  <div data-controller="chart" data-chart-type-value="line">
-    <div class="border-b border-gray-200 pb-5">
-      <h3 class="text-base font-semibold leading-4 text-gray-600">Runtime Breakdown</h3>
-    </div>
-    <div data-chart-target="chart"></div>
-    <script type="application/json" data-chart-target="data">
-      <%== @runtime_breakdown.to_a.to_json %>
-    </script>
-  </div>
-  <div data-controller="chart" data-chart-type-value="bar">
-    <div class="border-b border-gray-200 pb-5">
-      <h3 class="text-base font-semibold leading-4 text-gray-600">Errors</h3>
-    </div>
-    <div data-chart-target="chart"></div>
-    <script type="application/json" data-chart-target="data">
-      <%== @request_count_range.to_a.to_json %>
-    </script>
-  </div>
+<div class="grid grid-cols-1 gap-4 md:grid-cols-2">
+  <%= render 'chart', name: 'Latency', series: @latency_series, type: 'line' %>
+  <%= render 'chart', name: 'Requests', series: @request_count_range, type: 'bar' %>
+  <%= render 'chart', name: "Latency Breakdown", series: @latency_composition, type: 'area' %>
+  <%= render 'chart', name: 'Errors', series: @errors, type: 'bar' %>
 </div>
 
 <table class="min-w-full divide-y divide-gray-300">
@@ -50,7 +26,7 @@
     <tr>
       <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= controller_metric.action %></td>
       <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= controller_metric.request_count(@time_range) %></td>
-      <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= controller_metric.avg_latency(@time_range) %></td>
+      <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= controller_metric.avg_latency(@time_range).to_f.round(2) %>ms</td>
       <td class="whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
         <a href="#" class="text-indigo-600 hover:text-indigo-900"><%= link_to 'View', controller_metric_path(controller_metric.id) %></a>
       </td>
@@ -60,53 +36,3 @@
   <!-- More people... -->
   </tbody>
 </table>
-
-
-<!--        const count = new window.Apex(document.querySelector('#requests-chart'), {-->
-<!--            chart: {-->
-<!--                type: 'bar',-->
-<!--                height: 350,-->
-<!--                animations: {-->
-<!--                    enabled: false-->
-<!--                },-->
-<!--                toolbar: {-->
-<!--                    show: false-->
-<!--                },-->
-<!--            },-->
-<!--            title: {-->
-<!--                text: "requests",-->
-<!--                align: 'center'-->
-<!--            },-->
-<!--            series: [{-->
-<!--                data: <%#== @request_count_range.to_a.to_json %>-->
-<!--            }],-->
-<!--            xaxis: {-->
-<!--                type: 'datetime',-->
-<!--                min: <%#= @request_count_range.start_timestamp %>,-->
-<!--                max: <%#= @request_count_range.end_timestamp %>-->
-<!--            },-->
-<!--            yaxis: {-->
-<!--                decimalsInFloat: 0,-->
-<!--            },-->
-<!--            dataLabels: {-->
-<!--                enabled: false-->
-<!--            },-->
-<!--            fill: {-->
-<!--                opacity: .4,-->
-<!--            },-->
-<!--            stroke: {-->
-<!--                show: true,-->
-<!--                width: 1,-->
-<!--            },-->
-<!--            tooltip: {-->
-<!--                followCursor: true,-->
-<!--                x: {-->
-<!--                    format: 'dd MMM yyyy HH:mm'-->
-<!--                }-->
-<!--            }-->
-<!--        })-->
-<!--        count.render()-->
-<!--    })-->
-
-
-<!--</script>-->
